--- a/tutorial_TeX/refs.bib
+++ b/tutorial_TeX/refs.bib
@@ -2886,10 +2886,11 @@ Coalescence Theory, Population Size, Divergence Times},
 }
 
 @Book{Gelman2003,
-  Title                    = {Bayesian data analysis},
+  Title                    = {Bayesian Data Analysis},
   Author                   = {Gelman, A. and Carlin, J.B. and Stern, H.S. and Rubin, D.B.},
   Publisher                = {Chapman \& Hall/CRC},
   Year                     = {2003},
+  Edition                  = {2},
 
   Owner                    = {hoehna},
   Timestamp                = {2012.10.01}
