--- a/tutorial_TeX/refs.bib
+++ b/tutorial_TeX/refs.bib
@@ -7504,7 +7504,7 @@ Their algorithms are available in BAMBE (Bayesian Analysis in Molecular Biology 
 }
 
 @Article{Ree2008,
-  Title                    = {Maximum likelihood inference of geographic range evolution by dispersal, local extinction, and cladogenesis},
+  Title                    = {Maximum Likelihood Inference of Geographic Range Evolution by Dispersal, Local Extinction, and Cladogenesis},
   Author                   = {Ree, Richard H and Smith, Stephen A},
   Journal                  = {Systematic Biology},
   Year                     = {2008},
