--- a/tutorial_TeX/refs.bib
+++ b/tutorial_TeX/refs.bib
@@ -3603,7 +3603,7 @@ Gives also a introduction what else can be used and what is good and bad in ML, 
 }
 
 @Article{Hastings1970,
-  Title                    = {Monte Carlo Sampling Methods Using Markov Chains and Their Applications},
+  Title                    = {{M}onte {C}arlo Sampling Methods Using {M}arkov Chains and Their Applications},
   Author                   = {Hastings, W. K.},
   Journal                  = {Biometrika},
   Year                     = {1970},
@@ -5891,7 +5891,7 @@ Their algorithms are available in BAMBE (Bayesian Analysis in Molecular Biology 
 }
 
 @Article{Metropolis1953,
-  Title                    = {{Equation of State Calculations by Fast Computing Machines}},
+  Title                    = {Equation of State Calculations by Fast Computing Machines},
   Author                   = {Metropolis, N. and Rosenbluth, A.W. and Rosenbluth, M.N. and Teller, A.H. and Teller, E.},
   Journal                  = {Journal of Chemical Physics},
   Year                     = {1953},
