--- a/tutorial_TeX/refs.bib
+++ b/tutorial_TeX/refs.bib
@@ -45,6 +45,20 @@
   Volume                   = {67}
 }
 
+@article{Abby27032012,
+author = {Abby, Sophie S. and Tannier, Eric and Gouy, Manolo and Daubin, Vincent}, 
+title = {Lateral gene transfer as a support for the tree of life},
+volume = {109}, 
+number = {13}, 
+pages = {4962-4967}, 
+year = {2012}, 
+doi = {10.1073/pnas.1116871109}, 
+abstract ={Lateral gene transfer (LGT), the acquisition of genes from other species, is a major evolutionary force. However, its success as an adaptive process makes the reconstruction of the history of life an intricate puzzle: If no gene has remained unaffected during the course of life's evolution, how can one rely on molecular markers to reconstruct the relationships among species? Here, we take a completely different look at LGT and its impact for the reconstruction of the history of life. Rather than trying to remove the effect of LGT in phylogenies, and ignoring as a result most of the information of gene histories, we use an explicit phylogenetic model of gene transfer to reconcile gene histories with the tree of species. We studied 16 bacterial and archaeal phyla, representing a dataset of 12,000 gene families distributed in 336 genomes. Our results show that, in most phyla, LGT provides an abundant phylogenetic signal on the pattern of species diversification and that this signal is robust to the choice of gene families under study. We also find that LGT brings an abundant signal on the location of the root of species trees, which has been previously overlooked. Our results quantify the great variety of gene transfer rates among lineages of the tree of life and provide strong support for the ücomplexity hypothesis,ý which states that genes whose products participate to macromolecular protein complexes are relatively resistant to transfer.}, 
+URL = {http://www.pnas.org/content/109/13/4962.abstract}, 
+eprint = {http://www.pnas.org/content/109/13/4962.full.pdf}, 
+journal = {Proceedings of the National Academy of Sciences} 
+}
+
 @Article{Agresti2001,
   Title                    = {On Small-Sample Confidence Intervals for Parameters in Discrete Distributions},
   Author                   = {Agresti, Alan and Min, Yongyi},
@@ -8674,6 +8688,19 @@ Only done with MP!},
   Timestamp                = {2015.05.19}
 }
 
+@article{Szollosi2015,
+author = {Szöll{\H{o}}si, Gergely J. and Tannier, Eric and Daubin, Vincent and Boussau, Bastien},
+title = {The Inference of Gene Trees with Species Trees},
+journal = {Systematic Biology},
+volume = {64},
+number = {1},
+pages = {e42-e62},
+year = {2015},
+doi = {10.1093/sysbio/syu048},
+URL = { + http://dx.doi.org/10.1093/sysbio/syu048},
+eprint = {/oup/backfile/content_public/journal/sysbio/64/1/10.1093_sysbio_syu048/1/syu048.pdf}
+}
+
 @Article{Tamura1992,
   Title                    = {Estimation of the number of nucleotide substitutions when there are strong transition-transversion and G+ C-content biases.},
   Author                   = {Tamura, Koichiro},
@@ -9703,6 +9730,21 @@ They used a simple NNI for rooted trees},
   Editor                   = {M. Kasha and B. Pullman},
   Pages                    = {189--225},
   Publisher                = {Academic Press, New York}
+}
+
+@article{Zuckerkandl1965EvolutionaryDivergenceConvergence,
+  added-at = {2017-05-10T06:19:58.000+0200},
+  author = {Zuckerkandl, Emile and Pauling, Linus},
+  biburl = {https://www.bibsonomy.org/bibtex/26329d52a5aeb13d51764babe8246cedd/salotz},
+  interhash = {1ba5cccd57b257ef262e57060ddf2b24},
+  intrahash = {6329d52a5aeb13d51764babe8246cedd},
+  journal = {Evolving genes and proteins},
+  keywords = {evolution pauling protein-evolution},
+  pages = {97--166},
+  timestamp = {2017-05-10T06:19:58.000+0200},
+  title = {Evolutionary divergence and convergence in proteins},
+  volume = 97,
+  year = 1965
 }
 
 @Article{Zwickl2002,
